--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.pi4j</groupId>
             <artifactId>pi4j-core</artifactId>
-            <version>${project.version}</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
